# openptxas

./: .gitignore  ARCHITECTURE.md  LICENSE  MILESTONE_142_142.md  PACKAGING.md  PROOF.md  README.md  ROADMAP.md  __main__.py  bisect_run.py  check_ctrl.py  compare_sass.py  cubin_diff_test.py  decode_sass.py  demo.py  fp64_bench.py  fp64_bench_clean.ptx  fp64_isolate.py  fp64_run.py  fp64_run_ptxas.py  kernel_isolate.py  pyproject.toml  rebuild.py  run_cubin.py  showcase.py  sm_120_encoding_tables.json  stress_runner.py  test_minimal_runner.py  workbench.py  workbench_expanded.py
_r34/: debug_kernel.py
_r35/: probe.py
_r36/: bisect.py
_r37/: probe.py
_r38/: probe.py  probe2.py
_r39/: probe.py
_r40/: sweep.py
_r41/: nop_probe.py  run_sum.py
_r42/: audit.py
_r43/: bssy_probe.py  w1_loop_sum.ptx  w2_div_loop.ptx
_r44/: k100_early_exit.ptx  run_pred.py
_r46/: dump_sass.py  probe_imm.py
_r48/: dump_rbar.py  probe_handoff.py  probe_latency.py  probe_rbar.py
_r49/: dump_full.py  trace_imm.py  trace_passes.py
_r54/: sweep.py  sweep2.py
_r58/: probe_atom_and.ptx
_r62/: probe_relu.py  probe_relu2.py
_truth_bfe/: bfe.csv  summary.md
_truth_bfi/: bfi.csv  summary.md
_wb12_baseline/: after_fg18a_artifact.json  after_fg18a_stdout.txt  after_fg18a_suite_all.json  before_fg18a_artifact.json  before_fg18a_stdout.txt  before_fg18a_suite.txt  before_fg18a_suite_all.json  no_vecadd.json  normalize.py  post121_artifact.json  post121_stdout.txt  post122_artifact.json  post122_status.txt  post122_stdout.txt  post123_artifact.json  post123_stdout.txt  (+44 more)
(+406461 files in other folders)
